# watermark-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
hermes_plugin/: __init__.py
hermes_plugin/watermark_file/: __init__.py  plugin.yaml  watermark.py
scripts/: smoke_local_ollama.py
tests/: test_watermark_harness.py
watermark_harness/: __init__.py  cli.py  core.py
